PSP/borradores/ae/jwt/TVREST-AdrianSaavedra/src/main/java/org/example/tvrestadriansaavedra/common/errors/ApiError.java
package org.example.tvrestadriansaavedra.common.errors;

public record ApiError(String message) {
}
